# frame-interpolation

./: .dockerignore  .gitignore  README.md  cog.yaml  predict.py  pyproject.toml  requirements-cog.txt  requirements.txt
scripts/: create_dummy_videos.py  download_models.py
tests/: conftest.py  test_api.py  test_performance.py  test_predictor.py
